# Internship-WS22-CCA-Particle-Lenia-OpenGL

./: .gitignore  CMakeLists.txt  readme.md
shaders/: buffer_to_texture.comp  hue_rotation.frag
shaders/particle-lenia/: fields_2d.frag  fields_functions_2d.glsl  particle_2d.vert
shaders/particle-lenia/2d/: fields_2d.frag  fields_functions_2d.glsl  particle_2d.comp  particle_2d.vert
shaders/particle-lenia/3d/: fields_3d.frag  fields_functions_3d.glsl  particle_3d.vert
shaders/triangle/: shader.vert
src/: max_resolution.cpp
src/glfw-abstraction/: Arguments.h  Buffer.cpp  Buffer.h  FragmentOnlyShader.cpp  FragmentOnlyShader.h  GLFWAbstraction.h  Init.cpp  Init.h  PassthroughShader.cpp  PassthroughShader.h  SimpleComputeShader.cpp  SimpleComputeShader.h  SimpleShader.cpp  SimpleShader.h  Texture.cpp  Texture.h
src/particle-lenia/: gui2d.cpp  gui3d.cpp  particle_lenia_2d.hpp
